--- a/App/manifest.json
+++ b/App/manifest.json
@@ -2,7 +2,7 @@
     "name": "Cleaver Downloader",
     "description": "Clever_Downloader is a chrome extension which checks for duplicate downloads and hence saves your data",
     "version": "0.0.1",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "js": ["content.js"]
@@ -10,9 +10,9 @@
     "browser_action": {
         "default_popup": "popup.html",
         "default_title": "Cleaver Downloader",
-        "default_icon": "logo.png"
+        "default_icon": "cd.png"
     },
-    "permissions": ["activeTab"],
+    "permissions": ["activeTab", "downloads"],
     "commands": {
         "_execute_browser_action": {
             "description": "Clever_Downloader is a chrome extension which checks for duplicate downloads and hence saves your data"
@@ -20,10 +20,10 @@
     },
     "icons": {
 
-        "16": "/logo_16.png",
-        "24": "/logo_24.png",
-        "32": "/logo_32.png",
-        "48": "/logo_48.png",
-        "128": "/logo_128.png"
+        "16": "/cd_16.png",
+        "24": "/cd_24.png",
+        "32": "/cd_32.png",
+        "48": "/cd_48.png",
+        "128": "/cd_128.png"
     }
 }
