--- a/App/manifest.json
+++ b/App/manifest.json
@@ -5,8 +5,11 @@
     "manifest_version": 3,
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["content.js"]
+        "js": ["foreground.js"]
     }],
+    "background": {
+        "service_worker": "./background.js"
+    },
     "browser_action": {
         "default_popup": "popup.html",
         "default_title": "Cleaver Downloader",
