--- a/App/manifest.json
+++ b/App/manifest.json
@@ -5,10 +5,11 @@
     "manifest_version": 3,
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["foreground.js"]
+        "js": ["background.js"]
     }],
     "background": {
-        "service_worker": "./background.js"
+        "service_worker": "background.js"
+
     },
     "browser_action": {
         "default_popup": "popup.html",
@@ -18,9 +19,14 @@
     "permissions": ["activeTab", "downloads"],
     "commands": {
         "_execute_browser_action": {
-            "description": "Clever_Downloader is a chrome extension which checks for duplicate downloads and hence saves your data"
+            "description": "Clever_Downloader is a chrome extension which checks for duplicate downloads and hence saves your data",
+            "suggested_key": {
+                "default": "Ctrl+M",
+                "mac": "MacCtrl+M"
+            }
         }
     },
+
     "icons": {
 
         "16": "/cd_16.png",
